test/error/E42.chigmod
{
	"dependencies": ["lang"],
	"graphs": 23
}
